--- a/static/main/styles/scss/_button-social-media.scss
+++ b/static/main/styles/scss/_button-social-media.scss
@@ -34,10 +34,9 @@
 }
 
 .sticky-container {
-    position: sticky;
+    position: fixed;
     bottom: 0;
     right: 0;
-    margin-bottom: 15px;
     margin-right: 15px;
     z-index: 999;
 }
